# forecast

./: LICENSE  Makefile  pyproject.toml
bat/: __init__.py  cli.py  sensors.py
bat/server/: __init__.py  cli.py  server.py
bat/server/tests/: server_test.py
bat/testing/: README.md  cli.py
bat/tests/: cli_test.py  sensors_test.py
notebooks/: sensors.ipynb
